<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addEditRelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditMarket"
    android:padding="16dp">

    <EditText
        android:id="@+id/name_editView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/name"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/name_editView"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/lga_editView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lga"
            android:inputType="text"
            android:layout_marginEnd="4dp"/>

        <EditText
            android:id="@+id/state_editView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/state"
            android:inputType="text"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/lmd_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_market_day"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignBaseline="@id/set_last_date_button"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/set_last_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_layout"
        android:layout_toEndOf="@id/lmd_textView"
        android:layout_marginStart="16dp"
        android:text="@string/set_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/clickable_textView_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/set_last_date_button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/market_day_interval"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/market_day_inclusive"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/favourite"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/clickable_textView_layout"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/mdinterval_number_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mdinclusive_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:layoutDirection="rtl"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"/>

        <ImageView
            android:id="@+id/favourite_setter_imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/notification_icon"
            android:tag="2"
            android:src="@drawable/ic_notifications_off"/>


    </LinearLayout>

</RelativeLayout>